@@ -1,5 +1,9 @@
 2013-03-18  Jesse  <${AuthorEmail}>
 
+	* Vec2.cs: 
+
+2013-03-18  Jesse  <${AuthorEmail}>
+
 	* Player.cs:
 	* Physics.cs:
 	* Direction.cs:
